--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "LXX_EVADR_diff"
+name: LXX_EVADR_diff
 output_dir: ../docs
 navbar:
-  title: "LXX_EVADR_diff"
+  title: LXX_EVADR_diff
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/zhqy023/LXX_EVADR_diff
 output:
   workflowr::wflow_html:
     toc: yes
